# MSc_Project_A3DP

./: CMakeLists.txt  README.txt  package.xml
config/: models.yaml  params.yaml  setting.yaml  tags.yaml
include/msca3dp/: NDOctree.h  OctomapServer.h  sample.h
launch/: change_detection.launch  cloud.launch  gazebo.launch  gazebo_l515.launch  octomap.launch  rs_d435i.launch  rs_l515.launch  simObj.launch  tag_detection_d435i.launch  tag_detection_gazebo.launch  tag_detection_l515.launch  view_d435_model.launch  view_d435_model_rviz_gazebo.launch  view_l515_model.launch
models/Tags/Apriltag36_11_00000/: model.sdf
models/Tags/Apriltag36_11_00001/: model.sdf
models/Tags/Apriltag36_11_00002/: model.sdf
models/Tags/Apriltag36_11_00003/: model.sdf
models/Tags/Apriltag36_11_00004/: model.sdf
models/cube/: model.sdf
models/sampleBox/: model.config  model.sdf
models/tagbackground/: model.config  model.sdf
pcd/: model.pcd  ndtmodel.pcd  nmodel.pcd
rviz/: default.rviz  withgazebo.rviz
scripts/: OP_gazebo_D435i.ipynb  OP_gazebo_L515.ipynb  OP_real_D435i.ipynb  OP_real_l515.ipynb  camMove.py  camera_info.py  cv_ros.py  oc_prob.py  occupancy_probability.py
src/: NDOctree.cpp  OctomapServer.cpp  calibration.cpp  change_detection.cpp  plane_segment.cpp  sample.cpp  saveCloud.cpp  test_sample.cpp  visualCloud.cpp
urdf/: _d435.urdf.xacro  _l515.gazebo.xacro  _l515.urdf.xacro  _usb_plug.urdf.xacro  test_d435_camera.urdf.xacro  test_l515_camera.urdf.xacro
