<?xml version="1.0"?>
<package>
  <name>msca3dp</name>
  <version>1.0.0</version>
  <description>Sample Package</description>
  
  <maintainer email="ucabkkc@ucl.ac.uk">KaKei Choi</maintainer>
  <maintainer email="hyungjoo.kim.20@ucl.ac.uk">Hyungjoo Kim</maintainer>
  
  <license>BSD License</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosbag</run_depend>
</package>
